Legge til tester for å teste integrasjoner med altinn-rettigheter-proxy med klient lib (+fallback funksjon)